chore: clean up unused imports, add jackson-core dependency, and add trivy ignore file