@@ -48,9 +48,7 @@ public class VisionProcessor {
   public void startWorkers() {
     log.info("Starting 2 dedicated VisionProcessor ML worker threads");
     for (int i = 0; i < 2; i++) {
-      Thread worker = new Thread(this::processQueue, "MLWorker-" + i);
-      worker.setDaemon(false);
-      worker.start();
+Thread worker = Thread.ofVirtual().name("MLWorker-", i).start(this::processQueue);
       workers.add(worker);
     }
   }
